--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body {
   font-family: sans-serif;
   padding: 0;
   margin: 0;
-  color: #fff;
+ 
   overflow-x: hidden;
 }
 
@@ -50,6 +50,10 @@ h4 {
   letter-spacing: 0.5px;
   margin-left: 10px;
 }
+li .div-navlinks{
+  display: flex;
+  align-items: center;
+}
 
 .navLinks ul {
   display: flex;
@@ -65,6 +69,10 @@ h4 {
   text-decoration: none;
   color: rgb(141, 141, 141);
   display: block;
+}
+
+.navLinks li img{
+  padding-right: 5px;
 }
 
 .navLinks li a:hover > span {
@@ -107,6 +115,7 @@ h4 {
 #logout {
   display: none;
   color: #d500f9;
+  font-weight: 600;
 }
 
 .signup-div {
@@ -129,17 +138,26 @@ i.left {
   height: 100vh;
   width: 100%;
   background-color: whitesmoke;
-  background: url("../images/bg1.jpg") no-repeat top center;
-  background-size: cover;
+  background: url("../images/logoLgvanessa.png") no-repeat top center;
+  background-size: auto;
+  background-position: center;
 }
 #pacientes {
   display: none;
   height: 100vh;
-  width: 100%;
-  background-color: #aad8d3;
+  width: 100%; 
  
-  background-size: cover;
+  margin-top: 50px;
+  text-align: center;
+  
 }
+
+#section-crear-pacientes{
+  display: none;
+   height: 100vh;
+  width: 100%; 
+}
+
 
 #agenda {
   display: none;
@@ -148,6 +166,12 @@ i.left {
   background-color: whitesmoke;
   background-size: cover;
 }
+#entrar{
+    color: #d500f9;
+  font-weight: 600;
+}
+
+
 
 @media (max-width: 768px) {
   .toggle-button {
@@ -229,14 +253,6 @@ i.left {
   color: black;
 }
 
-table.striped > tbody > tr:nth-child(odd) {
-  background-color: rgba(4, 167, 167, 0.5);
-}
-
-table.highlight > tbody > tr:hover {
-  background-color: #ee6e73;
-  opacity: 0.7;
-}
 
 #agenda {
   display: flex;
@@ -250,17 +266,88 @@ table.highlight > tbody > tr:hover {
   overflow: hidden;
 }
 
-#tabla-agenda {
+#tabla-paciente {
   padding: 30px;
-  max-width: 66%;
+  max-width: 80%;
+}
+
+table.striped > tbody > tr:nth-child(odd) {
+  background-color: rgba(189, 186, 186, 0.5);
+}
+
+table.highlight > tbody > tr:hover {
+  background-color: #ee6e73;
+ 
+}
+
+table{
+  width: 50%;
+  margin-left: 250px;
+}
+
+.div-tabla{
+  width: 100%;
+  height: max-content;
+ margin: 0 auto;
 }
 
 table td {
-  padding: 20px;
-  border: 1px solid;
-  max-width: 125px;
-  overflow-x: scroll;
+  padding: 5px;
+  border: 1px solid #a8adb3;
+  width: fit-content;
+  
 }
+
+table td:nth-child(5){
+  width: 150px;
+}
+
+table td:nth-child(4){
+  width: 90px;
+  text-align: center;
+}
+
+#td-id-hidden,#th-id-hidden{
+  display: none;
+}
+
+th{
+  text-align: center;
+  border: 0.5px solid #a8adb3;
+padding: 5px ;
+background-color: chocolate;
+}
+
+.td-btn{
+ margin-left: 5px;
+ padding: 2px 5px;
+}
+
+.td-btn:hover{
+  opacity: 0.9;
+}
+
+#img-crear-paciente{
+  cursor: pointer;
+background-color: aqua;
+border-radius: 5px;
+
+}
+
+#img-crear-paciente:hover{
+background-color: #4db6ac;
+
+}
+
+
+
+
+
+
+
+
+
+
 
 /* INTRO SECTION TIME-LINE CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -430,6 +517,23 @@ time {
     border-width: 8px 16px 8px 0;
     border-color: transparent #f45b69 transparent transparent;
   }
+  #inicio{
+    background-size: contain;
+  }
+
+  .logo-dental{
+    display: none;
+  }
+
+  #usuario{
+    font-size: 10px;
+  }
+
+ table{
+   margin-left: 40px;
+
+ }
+
 }
 
 /* EXTRA/CLIP PATH STYLES
