--- a/css/odograma.css
+++ b/css/odograma.css
@@ -4,21 +4,25 @@ body {
   box-sizing: border-box;
 }
 
-.colorButtons {
-  display: block;
-  margin: 10px 0;
-}
-
 h1 {
   padding: 0;
-  margin: 0;
-  margin-left: 280px;
+  margin: 10px 0px 15px 230px;
   color: #095484;
 }
 
 h3 {
   margin-bottom: 10px;
   text-align: center;
+}
+
+button {
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid rgb(133, 129, 129);
+}
+
+button:hover {
+  border-color: #008800;
 }
 
 canvas {
@@ -28,29 +32,35 @@ canvas {
 div#sidebar {
   position: absolute;
   left: 0;
-  width: 200px;
+  width: 310px;
   min-height: 480px;
   padding: 10px;
-  top: 40px;
+  top: 60px;
   background-color: rgb(184, 179, 179);
   border: 1px solid rgb(122, 121, 121);
 }
 
 canvas#canvas {
-  left: 225px;
-  top: 40px;
+  left: 335px;
+  top: 60px;
+}
+
+.colorButtons {
+  display: flex;
+ justify-content: space-between;
+ align-items: center;
+
+
 }
 
 .btn-color {
-  width: 50px;
+  width: 25px;
   height: 20px;
-  margin: 5px;
+  margin: 2px;
   border: none;
   outline: none;
+  cursor: pointer;
 }
-
-
-
 
 #btncolor-blanco {
   background-color: #ffffff;
@@ -73,19 +83,21 @@ canvas#canvas {
 }
 
 label {
-  color: #615d5d;
+ 
+ 
+  font-weight: bolder;
 }
 
 .div-color-actual {
-  display: flex;
-  align-items: center;
-  margin-left: 5px;
+  width: 85px;
 }
 
 #color-actual {
   border: 2px solid rgb(197, 67, 197);
   border-radius: 5px;
-  width: 86px;
+  width: 80px;
+  pointer-events: none;
+  
 }
 
 #myH3 {
@@ -96,7 +108,7 @@ label {
 #div-figuras {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   margin-bottom: 10px;
 }
 
@@ -107,12 +119,12 @@ label {
   color: dark;
 }
 
-
-
 .btn.comando {
   width: 45px;
   height: 40px;
   margin: 3px;
+  color: #0000ff;
+  font-weight: 700;
 }
 
 input {
@@ -137,7 +149,6 @@ input {
 a {
   position: relative;
   top: 25px;
-  left: 20px;
   padding: 10px;
   border: 1px solid rgb(137, 137, 148);
   cursor: pointer;
@@ -151,18 +162,22 @@ a:hover {
   background-color: rgb(101, 245, 245);
 }
 
+.guardar {
+  text-align: center;
+}
+
 @media screen and (max-width: 600px) {
-div#sidebar{
-  width: 80px;
-}
+  div#sidebar {
+    width: 105px;
+  }
 
-h3{
-  font-size: 12px;
-}
+  h3 {
+    font-size: 12px;
+  }
 
-label{
-  font-size: 12px;
-}
+  label {
+    font-size: 12px;
+  }
 
   .colorButtons {
     display: flex;
@@ -171,21 +186,22 @@ label{
 
   #div-figuras {
     display: flex;
-    flex-direction: column;
+   
   }
 
- canvas#canvas {
-  left: 110px;
-  
-}
-}
-
-
-
-.pruebas{
- background-color:rgb(121, 113, 113);
+  canvas#canvas {
+    left: 130px;
+  }
 }
 
-.btn.activo{
+.pruebas {
+  background-color: rgb(121, 113, 113);
+}
+
+.btn.activo {
   background-color: springgreen;
+}
+
+#myH3{
+  display: none;
 }
