--- a/css/formulario1.css
+++ b/css/formulario1.css
@@ -18,8 +18,13 @@ p {
   color: #666;
 }
 
-p {
-  color: purple;
+.question p{
+  margin-bottom: 7px;
+}
+
+input,textarea {
+  color: orangered;
+  font-weight: 500;
 }
 
 h1 {
@@ -30,10 +35,15 @@ h1 {
   z-index: 2;
 }
 
+h1.control {
+  position: unset;
+}
+
 h5 {
   margin: 10px 0;
   color: #265a6e;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 .testbox {
@@ -54,10 +64,12 @@ h5 {
   text-align: center;
 }
 
+.banner.nuevo {
+  background-color: #00b8d4;
+}
+
 .banner::after {
   content: "";
-  background-color: #265a6e;
-
   position: absolute;
   width: 100%;
   height: 100%;
@@ -101,25 +113,89 @@ form {
   width: 450px;
 }
 
-#contacto {
-  width: 535px;
-}
 
-#div-genero,#div-edocivil{
+
+#div-genero,
+#div-edocivil {
   margin-left: 55px;
 }
 
-
-#div-odontograma{
+#div-odontograma {
   display: flex;
+  border: 1px solid rgb(153, 152, 152);
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
 }
 
-#div-odontograma > a{
-text-decoration: none;
-margin-right: 15px;
+#div-odontograma:hover {
+  border-color: rgb(7, 187, 190);
 }
 
+#div-odontograma > a {
+  text-decoration: none;
+  margin-right: 15px;
+}
 
+.odontograma.control {
+  margin-top: 20px;
+}
+
+#div-control-asistencia {
+  margin-bottom: 25px;
+}
+
+#div-control-asistencia > h5 {
+  text-align: center;
+}
+
+#formadepago {
+  width: 600px;
+}
+
+.div-h5 {
+  text-align: center;
+}
+
+#textcontrolasistencia {
+  height: auto;
+}
+
+.chip {
+  margin: 10px 0px 10px 0px;
+}
+
+.card-title {
+  font-weight: 700 !important;
+}
+
+#text-tratamiento {
+  min-height: 100px;
+}
+
+.carousel {
+  max-height: 250px;
+}
+
+.card {
+  margin-top: 80px;
+}
+
+.card .card-content {
+  padding: 0px 20px 0px 20px;
+}
+
+p.textoformato,
+#text-tratamiento,
+#pago-info {
+  color: black;
+  font-weight: 700;
+}
+
+#pago-info {
+  display: flex;
+  justify-content: space-around;
+}
 
 input,
 select,
@@ -135,7 +211,7 @@ input {
 }
 
 ::placeholder {
-  color: rgb(168, 165, 165);
+  color: rgb(189, 185, 185);
 }
 
 select {
@@ -153,19 +229,28 @@ textarea {
   margin-top: 0;
 }
 
-.item:hover p,
-.item:hover i,
-.question:hover p,
-.question label:hover a {
-  color: #095484;
+.item.fecha-control {
+  text-align: center;
 }
 
-.item input:hover,
-.item select:hover,
-.item textarea:hover {
-  border: 1px solid #0666a3;
+.info-pago {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+}
 
-  color: #095484;
+
+
+
+p:hover{
+  color:rgb(6, 157, 160);
+  font-weight: 600;
+}
+
+input:hover,
+select:hover,
+textarea:hover {
+  border: 1px solid rgb(7, 187, 190); 
 }
 
 .item {
@@ -193,10 +278,6 @@ label.check {
   margin-left: 22px;
 }
 
-span.required {
-  margin-left: 0;
-  color: red;
-}
 
 .checkbox-item label {
   margin: 5px 20px 10px 0;
@@ -217,20 +298,30 @@ label.radio:before {
 }
 
 label.check:before {
-  
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid #095484;
 }
 
+label.check:hover{
+  color:rgb(6, 157, 160);
+  font-weight: 600;
+}
+
+
+
+
+
+
+
 input[type="checkbox"]:checked + .check:before {
-  background: #095484;
+  background: orangered;
 }
 
 label.radio:after {
   left: 5px;
-  border: 3px solid #095484;
+  border: 3px solid orangered;
 }
 
 label.check:after {
@@ -277,10 +368,65 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  background: #0666a3;
+#btn-registrar-paciente{
+width: 100%;
+background: #26a69a;
 }
 
+#btn-registrar-paciente:hover{
+background: #28bbac;
+}
+
+/*Formulario Control Asistencia     */
+
+#div-odontograma.control,
+.item.control,
+.div-h5.control,
+.btn-block.control,
+#div-control-asistencia.control {
+  display: none;
+  
+}
+
+.btn-block.control {
+  margin-top: 0;
+}
+
+#btn-add-control {
+  display: flex;
+  justify-content: center;
+}
+
+#btn-add-control > img {
+  margin-top: 25px;
+  pointer-events: all;
+  cursor: pointer;
+}
+
+#tiny-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  color: black;
+  font-weight: 900;
+  padding: 5px;
+  background-color: red;
+  position: relative;
+  float: right;
+  left: 350px;
+  top: -55px;
+
+  pointer-events: all !important;
+  cursor: pointer !important;
+}
+
+#tiny-btn:hover {
+  background-color: teal;
+}
+
+/*FIN DE Formulario Control Asistencia     */
+
+/* MEDIA QUERIES ***************************************************************** */
 @media (min-width: 568px) {
   .city-item {
     display: flex;
@@ -292,7 +438,7 @@ button:hover {
     width: calc(50% - 20px);
   }
 
-  .city-item select {
+  .item select {
     width: calc(50% - 8px);
   }
 }
@@ -303,8 +449,25 @@ button:hover {
   }
 }
 
+/*INICIO DEL MEDIA QUERIES PROPIETARIO FEBB */
 @media (max-width: 600px) {
+  .testbox {
+    display: block;
+  }
+  form {
+    width: 90%;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
   .item.tipoInput {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  #div-ref-monto {
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
@@ -317,11 +480,46 @@ button:hover {
   #apellido,
   #fnacimiento,
   #tlflocal,
-  #contacto {
+  #edad,
+  #contacto,
+  #cedula,
+  #nombre,
+  #celular,
+  #email {
     width: 100%;
   }
 
-  #div-genero,#div-edocivil{
-  margin-left: 0px;
-}
+  #div-genero,
+  #div-edocivil {
+    margin-left: 0px;
+  }
+
+  #formadepago {
+    max-width: 360px;
+  }
+
+  .carousel-item {
+    transform: translateX(0px);
+  }
+
+  .card .card-content .card-title {
+    font-size: 15px;
+  }
+
+  #tiny-btn {
+    left: 110px;
+    top: -55px;
+  }
+
+  .banner.nuevo {
+    justify-content: flex-start;
+  }
+
+  .banner.nuevo > h1 {
+    margin-left: 10px;
+  }
+
+  #div-odontograma a > h5 {
+    font-size: 20px;
+  }
 }
