--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body {
   font-family: sans-serif;
   padding: 0;
   margin: 0;
- 
+
   overflow-x: hidden;
 }
 
@@ -37,6 +37,7 @@ h4 {
   height: 50px;
   margin-left: 35px;
   cursor: pointer;
+  object-fit: contain;
 }
 
 .brandName {
@@ -50,7 +51,7 @@ h4 {
   letter-spacing: 0.5px;
   margin-left: 10px;
 }
-li .div-navlinks{
+li .div-navlinks {
   display: flex;
   align-items: center;
 }
@@ -67,11 +68,11 @@ li .div-navlinks{
 
 .navLinks li a {
   text-decoration: none;
-  color: rgb(141, 141, 141);
+  color: rgb(133, 130, 130);
   display: block;
 }
 
-.navLinks li img{
+.navLinks li img {
   padding-right: 5px;
 }
 
@@ -138,26 +139,23 @@ i.left {
   height: 100vh;
   width: 100%;
   background-color: whitesmoke;
-  background: url("../images/logoLgvanessa.png") no-repeat top center;
-  background-size: auto;
-  background-position: center;
+  background: url("../images/foto-vanessa-2.png") no-repeat top center;
+  background-size: cover;
+  background-position: 0px 60px;
 }
 #pacientes {
   display: none;
   height: 100vh;
-  width: 100%; 
- 
+  width: 100%;
   margin-top: 50px;
   text-align: center;
-  
 }
 
-#section-crear-pacientes{
+#section-crear-pacientes {
   display: none;
-   height: 100vh;
-  width: 100%; 
+  height: 100vh;
+  width: 100%;
 }
-
 
 #agenda {
   display: none;
@@ -166,14 +164,175 @@ i.left {
   background-color: whitesmoke;
   background-size: cover;
 }
-#entrar{
-    color: #d500f9;
+#entrar {
+  color: #d500f9;
   font-weight: 600;
 }
 
+/* Dental add-ons */
+.btn,
+.btn-large,
+.btn-small,
+.btn-flat {
+  text-transform: none;
+}
 
+.btn.cyan:hover {
+  color: rgb(146, 65, 7);
+}
+.btn.cyan {
+  padding: 0 10px;
+}
+
+.modal-footer a {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.modal-footer a:hover {
+  color: black;
+}
+
+#agenda {
+  display: flex;
+  justify-content: space-between;
+}
+
+#div-img-agenda {
+  width: 300px;
+  height: 100vh;
+  background-color: greenyellow;
+  overflow: hidden;
+}
+
+#tabla-paciente {
+  padding: 30px;
+  width: 80%;
+  margin-left: 150px;
+}
+
+table.striped > tbody > tr:nth-child(odd) {
+  background-color: rgba(189, 186, 186, 0.5);
+}
+
+table.highlight > tbody > tr:hover {
+  background-color: #ee6e73;
+}
+
+table td {
+  padding: 5px;
+  border: 1px solid #a8adb3;
+}
+
+
+table td:nth-child(2),table td:nth-child(3) {
+  width: 90px;
+}
+table td:nth-child(5){
+  width: 60px;
+  text-align: center;
+}
+
+table td:nth-child(6){
+  width: 100px;
+  text-align: center;
+}
+
+table td:nth-child(4) {
+  width: 40px;
+  text-align: center;
+}
+
+table td:nth-child(7) {
+  width: 190px;
+  text-align: center;
+}
+
+.td-id-hidden,
+#th-id-hidden {
+  display: none;
+}
+
+th {
+  text-align: center;
+  border: 0.5px solid #a8adb3;
+  padding: 5px;
+  background-color: chocolate;
+}
+
+.td-btn:hover {
+  opacity: 0.9;
+}
+
+#btn-ver-paciente,
+#btn-control-paciente,#btn-eliminar-paciente {
+  width: 65px;
+  padding: 5px;
+  outline: none;
+  border: 1px solid teal;
+  border-radius: 5px;
+  margin-left: 7px;
+  background-color: rgb(39, 206, 206);
+  pointer-events: all;
+  cursor: pointer;
+}
+#btn-eliminar-paciente{
+  background-color: rgb(199, 52, 52);
+}
+
+#btn-ver-paciente:hover,
+#btn-control-paciente:hover {
+  color: white;
+}
+
+#img-crear-paciente {
+  margin-top: 35px;
+  cursor: pointer;
+  background-color: aqua;
+  border-radius: 5px; 
+}
+
+#img-crear-paciente:hover {
+  background-color: #4db6ac;
+}
+
+#img-ver {
+  pointer-events: none;
+}
+
+p.bottom10{
+  font-size: 20px;
+  margin-bottom: 15px;
+  color:#143961 ;
+  font-weight: bolder;
+  line-height: 10px;
+}
+
+ #div-pacientes-titulo > h3 {
+    font-size: 2.5rem;
+   font-weight: 700 !important;
+   margin-bottom: 5px;
+  }
+
+/*INICIO DEL MEDIA QUERY FEBB -------------------------------------------------------------- */
 
 @media (max-width: 768px) {
+  .img-menu {
+    opacity: 1;
+  }
+
+  #modal-msg {
+    width: 300px;
+  }
+
+  #modal-login {
+    width: 300px;
+  }
+
+  #inicio {
+    background-size: 112vh;
+  }
+
   .toggle-button {
     display: flex;
   }
@@ -196,158 +355,62 @@ i.left {
   .navLinks ul {
     flex-direction: column;
     width: 100%;
+    height: 100vh;
     background-color: aqua;
     margin-right: 0;
+    opacity: 0.8;
   }
 
   .navLinks li a {
     padding: 0.5rem 1 rem;
   }
 
+  .navLinks ul li:nth-child(1) {
+    margin-top: 50px;
+  }
+
+  .navLinks li {
+    min-width: 130px;
+  }
+
   .logo-dental {
     width: 80px;
     height: 35px;
-    background-color: #333;
+    margin-left: 10px;
     border-radius: 15px;
+    object-fit: contain;
   }
-}
 
-/* Dental add-ons */
-.btn,
-.btn-large,
-.btn-small,
-.btn-flat {
-  text-transform: none;
-}
+  #usuario {
+    font-size: 8px;
+    color: magenta;
+    font-weight: bold;
+  }
 
-.btn.cyan:hover {
-  color: rgb(146, 65, 7);
-}
-.btn.cyan {
-  padding: 0 10px;
-}
+  table td {
+    font-size: 10px;
+  }
 
-#modal-crud {
-  margin-top: 2rem;
-  width: 380px;
-  height: 200px;
-  border-radius: 10px;
-}
+  #tabla-paciente {
+    width: 95%;
+    margin-left: 10px;
+    max-width: 100%;
+    padding: 0;
+  }
 
-#modal-crud .modal-content {
-  padding: 24px 24px 0px 24px;
-}
-.pacientes-box {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.modal-footer a {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.modal-footer a:hover {
-  color: black;
-}
-
-
-#agenda {
-  display: flex;
-  justify-content: space-between;
-}
-
-#div-img-agenda {
-  width: 300px;
-  height: 100vh;
-  background-color: greenyellow;
-  overflow: hidden;
-}
-
-#tabla-paciente {
-  padding: 30px;
-  max-width: 80%;
-}
-
-table.striped > tbody > tr:nth-child(odd) {
-  background-color: rgba(189, 186, 186, 0.5);
-}
-
-table.highlight > tbody > tr:hover {
-  background-color: #ee6e73;
  
-}
 
-table{
-  width: 50%;
-  margin-left: 250px;
-}
+  #btn-ver-paciente,#btn-eliminar-paciente{
+    margin-top: 5px;
+  }
+#div-pacientes-titulo > h3 {
+    font-size: 2rem;
+   font-weight: 700 !important;
+  }
 
-.div-tabla{
-  width: 100%;
-  height: max-content;
- margin: 0 auto;
-}
-
-table td {
-  padding: 5px;
-  border: 1px solid #a8adb3;
-  width: fit-content;
-  
-}
-
-table td:nth-child(5){
-  width: 150px;
-}
-
-table td:nth-child(4){
-  width: 90px;
-  text-align: center;
-}
-
-#td-id-hidden,#th-id-hidden{
-  display: none;
-}
-
-th{
-  text-align: center;
-  border: 0.5px solid #a8adb3;
-padding: 5px ;
-background-color: chocolate;
-}
-
-.td-btn{
- margin-left: 5px;
- padding: 2px 5px;
-}
-
-.td-btn:hover{
-  opacity: 0.9;
-}
-
-#img-crear-paciente{
-  cursor: pointer;
-background-color: aqua;
-border-radius: 5px;
 
 }
-
-#img-crear-paciente:hover{
-background-color: #4db6ac;
-
-}
-
-
-
-
-
-
-
-
-
-
+/*FIN DEL MEDIA QUERY */
 
 /* INTRO SECTION TIME-LINE CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -492,16 +555,6 @@ time {
 /* GENERAL MEDIA QUERIES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-@media screen and (max-width: 900px) {
-  .timeline ul li div {
-    width: 250px;
-  }
-  .timeline ul li:nth-child(even) div {
-    left: -289px;
-    /*250+45-6*/
-  }
-}
-
 @media screen and (max-width: 600px) {
   .timeline ul li {
     margin-left: 20px;
@@ -517,25 +570,7 @@ time {
     border-width: 8px 16px 8px 0;
     border-color: transparent #f45b69 transparent transparent;
   }
-  #inicio{
-    background-size: contain;
-  }
-
-  .logo-dental{
-    display: none;
-  }
-
-  #usuario{
-    font-size: 10px;
-  }
-
- table{
-   margin-left: 40px;
-
- }
-
 }
-
 
 /* EXTRA/CLIP PATH STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
