--- a/css/odograma.css
+++ b/css/odograma.css
@@ -29,6 +29,24 @@ canvas {
   cursor: crosshair;
 }
 
+ #h2-nombre{
+    margin-left: 65px;
+  }
+
+ #btn-cerrar{
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: teal;
+    font-weight: bolder;
+    font-size: 20px;  
+    pointer-events: all; 
+    cursor: pointer;
+  }
+
 div#sidebar {
   position: absolute;
   left: 0;
@@ -232,7 +250,38 @@ a:hover {
   }
 
   div#sidebar {
-    width: 105px;
+    width: 160px;
+    height: 100%;
+    top: 40px;
+  }
+
+  .btn-color {
+    width: 18px;
+  }
+
+  a {
+    top: 20px;
+  }
+
+  h3 {
+    display: none;
+  }
+
+  #label-seleccionado {
+    display: none;
+  }
+
+  .div-color-actual {
+    margin-top: 7px;
+    margin-bottom: 0px;
+  }
+
+  hr{
+    margin-top: 2px;
+  }
+
+  #h2-nombre{
+    margin-left: 40px;
   }
 
   h3 {
@@ -253,16 +302,29 @@ a:hover {
   }
 
   canvas#canvas {
-    left: 130px;
+    left: 190px;
+    top: 40px;
   }
 
   #progress {
-    top: 15px;
-    left: 0 px;
-   font-size: 12px;
-   font-weight: 600;
+    top: 35px;
+    left: 20px;
+    font-size: 12px;
+    font-weight: 600;
   }
+
+  #btn-cerrar{
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    top: 5px;
+    left: 5px;
+   
+  }
+
+
 }
+/*FIN DEL MEDIA QUERIES FEBB */
 
 .pruebas {
   background-color: rgb(121, 113, 113);
@@ -275,3 +337,151 @@ a:hover {
 #myH3 {
   display: none;
 }
+
+/* ----- MY CUSTOM LOADING SPINNER  */
+
+.myspinner-container {
+  /* display: flex; */
+  margin: 0 auto;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  top: 100px;
+  display: none;
+  z-index: 999;
+}
+
+.myspinner-sector {
+  border-radius: 50%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 15px solid transparent;
+  border-top: 15px solid green;
+  mix-blend-mode: overlay;
+}
+
+.myspinner-text {
+  animation: myLoading 1s ease-in-out infinite;
+  font-size: 2em;
+  text-align: center;
+}
+
+.myspinner-text::before {
+  color: darkred;
+  font-weight: 800;
+  content: attr(data-spintext);
+}
+
+.myspinner-sector-blue {
+  animation: myRotate 1s ease-out infinite;
+  border-top: 15px solid lightseagreen;
+}
+
+.myspinner-sector-red {
+  animation: myRotate 1.5s ease-in infinite;
+  border-top: 15px solid lightcoral;
+}
+
+.myspinner-sector-green {
+  animation: myRotate 0.5s ease-in-out infinite;
+  border-top: 15px solid lightgreen;
+}
+
+@keyframes myRotate {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes myLoading {
+  0%,
+  100% {
+    opacity: 1;
+  }
+
+  25%,
+  75% {
+    opacity: 0.5;
+  }
+
+  50% {
+    opacity: 0.1;
+  }
+}
+
+/* ----- END OF MY CUSTOM LOADING SPINNER  */
+
+/* ----- MY CUSTOM MODAL ------ */
+.myModal-div {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* display: flex; */
+  display: none;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+  opacity: 0;
+  transition: 250ms opacity ease-in;
+}
+
+.mymodal-container {
+  background-color: white;
+  width: 22rem;
+  padding: 1.5rem;
+  border-radius: 10px;
+}
+
+.mymodal-title {
+  text-align: center;
+  margin: 5px 0;
+}
+
+#mymodal-text {
+  text-align: justify;
+  border-top: 1px solid teal;
+  padding: 0.5rem 0;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.mymodal-btncontainer {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
+}
+
+.mymodal-btn {
+  padding: 0.4rem 0.8rem;
+  outline: none;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 1px solid teal;
+  border-radius: 5px;
+}
+
+#mymodal-btncerrar {
+  background-color: transparent;
+  color: teal;
+}
+
+#mymodal-btnaceptar {
+  background-color: teal;
+  color: white;
+}
+
+.mostrar-modal {
+  opacity: 1;
+  pointer-events: auto;
+}
+/* ----- END OF MY CUSTOM MODAL ------ */
